log
Thu 16 May 2024 03:07:47 PM UTC: 
 tests:  0|5
total_score: 0/70
c476f05
Thu 16 May 2024 03:12:09 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|5
total_score: 0/70
5e9338b
Thu 16 May 2024 03:46:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d183264
Thu 16 May 2024 03:48:55 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
93f4019
Thu 16 May 2024 03:57:42 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
dbc2079
Thu 16 May 2024 04:03:04 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3765327
Thu 16 May 2024 04:03:39 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
49980e3
